Bug 106695 - [CI] igt@gem_ringfill@basic-default - fail - Failed assertion: __execbuf(fd, &execbuf) == -4
Summary: [CI] igt@gem_ringfill@basic-default - fail - Failed assertion: __execbuf(fd, ...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: XOrg git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard: ReadyForDev
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-28 16:06 UTC by Martin Peres
Modified: 2018-06-19 14:26 UTC (History)
1 user (show)

See Also:
i915 platform: BSW/CHT
i915 features: GEM/Other


Attachments

Description Martin Peres 2018-05-28 16:06:46 UTC
https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4249/fi-bsw-cyan/igt@gem_ringfill@basic-default.html

(gem_ringfill:2931) i915/gem_ring-CRITICAL: Test assertion failure function __gem_measure_ring_inflight, file ../lib/i915/gem_ring.c:102:
(gem_ringfill:2931) i915/gem_ring-CRITICAL: Failed assertion: __execbuf(fd, &execbuf) == -4
(gem_ringfill:2931) i915/gem_ring-CRITICAL: error: 0 != -4
Test gem_ringfill failed.
Comment 1 Chris Wilson 2018-05-31 16:51:41 UTC
commit ae0ea2a0cff1cf8516d18ada5b9db01c56b73ed9 (HEAD, upstream/master)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed May 30 11:05:42 2018 +0100

    lib: Double check ring measurement
    
    Check twice for the signal interrupting the execbuf, because the real
    world is messy.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=106695
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Cc: Antonio Argenziano <antonio.argenziano@intel.com>
    Reviewed-by: Antonio Argenziano <antonio.argenziano@intel.com>

should make it even less likely to hit the impossible condition!
Comment 2 Jani Saarinen 2018-06-19 14:26:01 UTC
Closing, thanks.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.